2002-02-10  Stefan Hundhammer  <sh@suse.de>

	* Fixed double slashes in URLs when opening with file selection box
	* Bumped version to 1.8.7-rc2

2002-02-09  Stefan Hundhammer  <sh@suse.de>

	* Fixed huge numbers overflow in details context popup
	* Fixed huge numbers sorting
	* Added new action "continue reading at mount point".
	  This is essentially the same as "refreshing selected branch",
	  but it's more intuitive to use.

2002-02-02  Stefan Hundhammer  <sh@suse.de>

	* Initial help documentation
	* Bumped version to 1.8.6-rc1
	  This is the first release candidate.
	  The final version will be released as 2.0

2002-01-27  Stefan Hundhammer  <sh@suse.de>

	* Fixed update bug upon "refresh branch" and executing cleanups
	* Embed cleanup %p / %n parameters in double quotes
	* Added keyboard accelerators for standard cleanups
	* (Partial) fix for PacMan animation display error on some KDE themes
	* Bumped version to 1.8.5-beta

2002-01-19  Stefan Hundhammer  <sh@suse.de>

	* Added feedback mail facility
	* Bumped version to 1.8.4-beta

2002-01-10  Stefan Hundhammer  <sh@suse.de>

	* Fixed repaint error in percentage bar column when scrolling
	* Fixed repaint error when resizing percentage bar column

2002-01-04  Stefan Hundhammer  <sh@suse.de>

	* Bumped version to 1.8.3-beta
	  The new KDirStat is now as complete as the old one ever was!
	
	* Added simple 'mail to owner' report
	* Implemented cleanup configuration
	* Added 'ask for confirmation' flag to cleanups
	* Added 'works for local files only' flag to cleanups
	* Fixed URL handling: Always strip off trailing slash
	* Fixed app icon
	* Fixed .desktop file - KDirStat is now in 'Utilities'

2002-01-03  Stefan Hundhammer  <sh@suse.de>

	* Implemented save/read configuration
	* Updated TODO list - gosh, was this thing outdated!
	* kdDebug() operator << for KCleanup
	* kdDebug() operator << for KDirTreeViewItem
	

2002-01-02  Stefan Hundhammer  <sh@suse.de>

	* Implemented 'settings' dialog